# ai-streamer-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_rate_limits.py  test_ws.html
app/: main.py
app/api/: chat.py  deps.py  live_endpoints.py  live_stream_ws.py  room.py  ws.py
app/core/: config.py  logging.py  persona.py  rate_limit.py  settings.py
app/db/: __init__.py  chat_repository.py
app/llm/: client.py  gemini_bot.py  gemini_provider.py  google_genai_client.py
app/prompts/: streamer.py
app/rag/: document_loader.py  faiss_adapter.py  text_chunker.py  vector_store.py
app/schemas/: __init__.py  api_response.py  response.py
app/services/: bot_context.py  chat_service.py  connection.py  live_room.py  live_service.py  live_system.py  room.py  session.py
app/tts/: edge_tts_provider.py  engine.py
backend/: .dockerignore  .env.example  requirements.txt  test_ws.html
backend/app/api/: live_endpoints.py  live_stream_ws.py
backend/app/core/: persona.py  rate_limit.py  settings.py
backend/app/llm/: client.py  gemini_provider.py
backend/tests/: conftest.py  test_edge_tts_provider.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/types/: index.ts
tests/: conftest.py  test_chat_service.py  test_document_loader.py  test_faiss_adapter.py  test_live_service.py  test_live_system.py  test_persona.py  test_text_chunker.py  test_tts_engine.py  test_vector_store.py  test_ws_rate_limit.py
(+14 files in other folders)
