[project]
name = "ai-streamer-demo"
version = "0.1.0"
description = "AI 虚拟主播后端"
requires-python = ">=3.12"

[tool.pytest.ini_options]
# 测试目录
testpaths = ["tests"]
# asyncio 模式：strict 要求显式标记 @pytest.mark.asyncio
asyncio_mode = "strict"
# 默认命令行参数
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
